# Notion3D

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  eiffel_tower.scad  package.json
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: config.py  deps.py  exceptions.py  main.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: design.py  health.py  job_events.py  project_agent.py  project_state_events.py  projects.py  templates.py  tools.py
apps/api/app/services/: agent_activity.py  assembly_digest.py  atomic_io.py  cad_backend.py  cad_parts.py  cad_service.py  cad_types.py  cad_validation.py  capabilities.py  chat_present.py  design_intent.py  design_turn.py  forge_modeling.py  forge_preview_service.py  forgecad_service.py  job_events.py  job_store.py  (+14 more)
apps/api/tests/: conftest.py  test_agent_prompt.py  test_assembly_spec.py  test_assembly_validation.py  test_atomic_io.py  test_cad_parts.py  test_cad_service.py  test_cad_validation.py  test_deps.py  test_design_intent.py  test_design_pipeline.py  test_doc_drift.py  test_exception_handlers.py  test_forge_modeling.py  test_forge_preview.py  test_forge_sources.py  test_gateway_adapter.py  test_hermes.py  test_job_events.py  test_mcp_wait_job.py  test_project_state_events.py  test_registry.py  test_render_forge_validation.py  test_render_scad_validation.py  test_spatial_digest_and_images.py  test_templates.py  test_turn.py
apps/mcp-server/: README.md  pyproject.toml
apps/mcp-server/notion3d_mcp/: __init__.py  client.py  enrich.py  links.py  server.py
(+187 files in other folders)
