[project]
name = "notion3d-mcp"
version = "0.2.0"
description = "Notion3D MCP Server — Agent tools for OpenSCAD modeling pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0,<0.42.0",
]

[project.scripts]
notion3d-mcp = "notion3d_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notion3d_mcp"]
